[package]
name = "msm-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.11"
rust-kzg-blst = { path = "../blst", default-features = false, features = ["std", "rand"] }
rust-kzg-arkworks3 = { path = "../arkworks3", default-features = false, features = ["std", "rand"] }
rust-kzg-arkworks4 = { path = "../arkworks4", default-features = false, features = ["std", "rand"] }
rust-kzg-arkworks5 = { path = "../arkworks5", default-features = false, features = ["std", "rand"] }
rust-kzg-constantine = { path = "../constantine", default-features = false, features = ["std", "rand"] }
rust-kzg-mcl = { path = "../mcl", default-features = false, features = ["std", "rand"] }
rust-kzg-zkcrypto = { path = "../zkcrypto", default-features = false, features = ["std", "rand"] }
ekzg-bls12-381 = { git = "https://github.com/crate-crypto/rust-eth-kzg.git" }
blstrs = "0.7.1"
kzg = { path = "../kzg" }
rand = "0.8.5"
rand_core = "0.6"
rand_chacha = "0.3"

[dev-dependencies]
criterion = "0.5.1"
human_bytes = "0.4.3"

[features]
wbits = [
    "rust-kzg-blst/wbits",
    "rust-kzg-arkworks4/wbits",
    "rust-kzg-arkworks5/wbits",
    "rust-kzg-constantine/wbits",
]
bgmw = [
    "rust-kzg-blst/bgmw",
    "rust-kzg-arkworks4/bgmw",
    "rust-kzg-arkworks5/bgmw",
    "rust-kzg-constantine/bgmw",
]
arkmsm = [
    "rust-kzg-blst/arkmsm",
    "rust-kzg-arkworks4/arkmsm",
    "rust-kzg-arkworks5/arkmsm",
    "rust-kzg-constantine/arkmsm",
]
parallel = [
    "rust-kzg-blst/parallel",
    "rust-kzg-arkworks3/parallel",
    "rust-kzg-arkworks4/parallel",
    "rust-kzg-arkworks5/parallel",
    "rust-kzg-constantine/parallel",
    "rust-kzg-mcl/parallel",
]
strauss = [
    "rust-kzg-blst/strauss",
    "rust-kzg-arkworks4/strauss",
    "rust-kzg-arkworks5/strauss",
    "rust-kzg-constantine/strauss",
]

# Re-export diskcache for backends so benches can enable it with a single flag
# Enables the `diskcache` feature in `kzg` and the common backend crates
diskcache = [
    "kzg/diskcache",
    "rust-kzg-blst/diskcache",
    "rust-kzg-arkworks3/diskcache",
    "rust-kzg-arkworks4/diskcache",
    "rust-kzg-arkworks5/diskcache",
    "rust-kzg-constantine/diskcache",
]

[[bench]]
name = "g1_fixed_base_msm"
harness = false
