[package]
name = "rust-eth-kzg-benches"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = { workspace = true }
rust_eth_kzg = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { workspace = true }
rand = "0.8.5"

[features]
parallel = ["rust_eth_kzg/multithreaded"]

[[bench]]
name = "eip_7594"
harness = false

[[bench]]
name = "trusted_setup"
harness = false
