[package]
name = "rust-kzg-zkcrypto"
version = "0.1.0"
edition = "2021"

[dependencies]
blst = "0.3.11"
kzg = { path = "../kzg", default-features = false }
bls12_381 = { path = "../zkcrypto/bls12_381" }
ff = { version = "0.13", features = ["derive"] }
hex = "0.4.3"
rand = { version = "0.8.5", optional = true }
libc = { version = "0.2.148", default-features = false }
rayon = { version = "1.8.0", optional = true }
subtle = "2.5.0"
byteorder = "1.5.0"

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { path = "../kzg-bench" }
rand = { version = "0.8.5" }

[features]
default = [
    "std",
    "rand",
    "c_bindings"
]
std = [
    "kzg/std",
    "libc/std"
]
parallel = [
    "dep:rayon", "kzg/parallel"
]
rand = [
    "dep:rand",
    "kzg/rand",
]
c_bindings = []

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "lincomb"
harness = false

