[package]
name = "rust-kzg-zkcrypto"
version = "0.1.0"
edition = "2021"

[dependencies]
kzg = { workspace = true }
bls12_381 = { workspace = true }
ff = { workspace = true, features = ["derive"] }
hex = { workspace = true }
rand = { version = "0.8.5", optional = true }
libc = { workspace = true }
rayon = { workspace = true, optional = true }
subtle = { workspace = true }
byteorder = { workspace = true }

[dev-dependencies]
criterion = "0.5.1"
kzg-bench = { workspace = true }
rand = { version = "0.8.5" }

[features]
default = [
    "std",
    "rand",
]
std = [
    "kzg/std",
    "libc/std"
]
parallel = [
    "dep:rayon", "kzg/parallel"
]
rand = [
    "dep:rand",
    "kzg/rand",
]
c_bindings = []

[[bench]]
name = "fft"
harness = false

[[bench]]
name = "kzg"
harness = false

[[bench]]
name = "poly"
harness = false

[[bench]]
name = "das"
harness = false

[[bench]]
name = "fk_20"
harness = false

[[bench]]
name = "recover"
harness = false

[[bench]]
name = "zero_poly"
harness = false

[[bench]]
name = "eip_4844"
harness = false

[[bench]]
name = "eip_7594"
harness = false

[[bench]]
name = "lincomb"
harness = false

