[package]
name = "mcl_kzg_bench"
version = "0.1.0"
edition = "2018"

[profile.bench]
opt-level = 3
debug = false
lto = "thin"

[dependencies]
mcl_rust = { path = '../kzg' }
blst = {'git' = 'https://github.com/supranational/blst.git'}
kzg = { path = "../../kzg" }
kzg-bench = { path = "../../kzg-bench" }

[dev-dependencies]
rand = "0.8.5"
criterion = "0.4.0"

[[bench]]
name = "shared_fk20"
harness = false

[[bench]]
name = "shared_zero_poly"
harness = false

[[bench]]
name = "shared_fft"
harness = false

[[bench]]
name = "shared_poly"
harness = false

[[bench]]
name = "shared_das"
harness = false

[[bench]]
name = "shared_recover"
harness = false

[[bench]]
name = "shared_kzg_proof"
harness = false

[[bench]]
name = "shared_eip_4844"
harness = false

#[[bench]]
#name = "bench_fft"
#harness = false

#[[bench]]
#name = "bench_proof_check"
#harness = false

#[[bench]]
#name = "bench_das"
#harness = false

#[[bench]]
#name = "bench_proof_gen"
#harness = false

#[[bench]]
#name = "bench_commits"
#harness = false

