[package]
name = "rust-kzg-mcl"
version = "0.0.1"
authors = ["MITSUNARI Shigeo <herumi@nifty.com>"]
description = "a wrapper class/function of a pairing library; https://github.com/herumi/mcl"
license = "BSD-3-Clause OR MIT OR Apache-2.0"
edition = "2021"

[dependencies]
cc = "1.0"
blst = {'git' = 'https://github.com/supranational/blst.git'}
kzg = { path = "../../kzg" }
primitive-types = "0.12.0"
rayon = { version = "1.5.1", optional = true }
once_cell = "1.4.0"
libc = "0.2.139"
num_cpus = "1.15.0"
hex = "0.4.2"

[features]
parallel = ["rayon"]
minimal-spec = ["kzg/minimal-spec"]

[build-dependencies]
cc = "1.0"
