[package]
authors = [
    "Sean Bowe <ewillbefull@gmail.com>",
    "Jack Grigg <thestr4d@gmail.com>",
]
description = "Implementation of the BLS12-381 pairing-friendly elliptic curve construction"
documentation = "https://docs.rs/bls12_381/"
homepage = "https://github.com/zkcrypto/bls12_381"
license = "MIT/Apache-2.0"
name = "bls12_381"
repository = "https://github.com/zkcrypto/bls12_381"
version = "0.8.0"
edition = "2021"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

[dev-dependencies]
csv = { workspace = true } # csv 1.2 has MSRV 1.60
criterion = "0.3"
hex = { workspace = true }
rand_xorshift = { workspace = true }
sha2 = "0.9"
sha3 = { workspace = true }

[[bench]]
name = "groups"
harness = false
required-features = ["groups"]

[[bench]]
name = "hash_to_curve"
harness = false
required-features = ["experimental"]

[dependencies]
digest= { workspace = true, optional = true }
ff= { workspace = true }
group= { workspace = true, optional = true }
pairing= { workspace = true, optional = true }
rand_core= { workspace = true }
subtle= { workspace = true }
zeroize= { workspace = true, optional = true }

[features]
default = ["groups", "pairings", "alloc", "bits"]
bits = ["ff/bits"]
groups = ["group"]
pairings = ["groups", "pairing"]
alloc = ["group/alloc"]
experimental = ["digest"]
nightly = ["subtle/nightly"]
